--- a/about/default.html
+++ b/about/default.html
@@ -8,13 +8,13 @@
 <body>
 	<header>
 	<div class="bridge">
-		<img src="artwork/bridge.jpg" alt="Bridge" width="100%">
+		<img src="https://i.imgsafe.org/b83bb794b1.jpg" alt="Bridge" width="100%">
 		<h1>Ryan Branscum</h1>
 		<ul>
 			
-			<li><a href="default.html">about</a></li>
-			<li><a href="projects/default.html">projects</a></li>
-			<li><a href="contact/default.html">contact</a></li>
+			<li><a href="about">about</a></li>
+			<li><a href="projects">projects</a></li>
+			<li><a href="contact">contact</a></li>
 
 		</ul>
 	</div>	
@@ -26,7 +26,7 @@
 	</section>
 	 <content>
 		<div class="mac">
-		<img src="artwork/mac.jpg" alt="mac">
+		<img src="https://i.imgsafe.org/b83bb4af40.jpg" alt="mac">
 		</div>
 	</content> 
 	<div class="aboutme">
